build(*): :lock: Path Traversal: 'dir/../../filename' in moment.locale
@twilio/runtime-handler@1.2.3 requires moment@2.19.3 via twilio@3.29.2

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "twilio": "^3.77.2",
     "twilio-flex-token-validator": "^1.5.6"
   },
+  "overrides": {
+    "@twilio/runtime-handler@^1.2.3": {
+      "moment": ">=2.29.2"
+    }
+  },
   "devDependencies": {
     "@twilio-labs/serverless-runtime-types": "^2.2.3",
     "eslint": "^8.14.0",
