--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.3",
   "description": "Twilio Functions utils library",
   "main": "index.js",
+  "types": "./types/use.injection.d.ts",
   "directories": {
     "lib": "lib"
   },
@@ -14,7 +15,9 @@
     "url": "git+ssh://git@github.com/iagocalazans/twilio-functions-utils.git"
   },
   "keywords": [
-    "Twilio",
+    "twilio",
+    "twilio-labs",
+    "structure",
     "serverless",
     "function",
     "functions",
