--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/iagocalazans/twilio-functions-utils#readme",
   "dependencies": {
+    "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.2.3",
     "lodash": "^4.17.21",
     "twilio": "^3.77.2",
