--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll --collect-coverage"
   },
   "repository": {
     "type": "git",
