--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
+sudo: false
 language: node_js
+node_js:
+  - node
+env:
+  global:
+    - COVERALLS_PARALLEL=true
+jobs:
+  include:
+    - script: COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
+notifications:
+  webhooks: https://coveralls.io/webhook
