--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twilio-functions-utils",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "Twilio Functions utils library",
   "main": "index.js",
   "types": "./types/twilio-functions-utils",
@@ -19,14 +19,10 @@
   "keywords": [
     "twilio",
     "twilio-labs",
-    "structure",
     "serverless",
-    "function",
     "functions",
     "utils",
-    "library",
-    "inject",
-    "injector",
+    "injection",
     "dependency"
   ],
   "author": "Iago Calazans <iago.calazans@gmail.com>",
@@ -46,6 +42,7 @@
     "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.0.2",
     "lodash": "^4.17.21",
+    "try2catch": "^0.0.7",
     "twilio": "^4.7.2",
     "twilio-flex-token-validator": "^1.5.6"
   },
