--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.0.2",
     "lodash": "^4.17.21",
-    "try2catch": "^0.0.7",
+    "try2catch": "0.0.8",
     "twilio": "^4.7.2",
     "twilio-flex-token-validator": "^1.5.6"
   },
