--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.0.2",
+    "axios": "^1.5.0",
     "lodash": "^4.17.21",
     "twilio": "^3.77.2",
     "twilio-flex-token-validator": "^1.5.6"
