--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,4 +5,4 @@ extends: standard-with-typescript
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules: { "callback-return": ["none"] }
