--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.2.3",
     "lodash": "^4.17.21",
+    "rxjs": "^7.8.2",
     "twilio": "^3.77.2",
     "twilio-flex-token-validator": "^1.5.6"
   },
   "devDependencies": {
     "@twilio-labs/serverless-runtime-types": "^2.2.3",
+    "@types/ci-info": "^2.0.0",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
