--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "twilio-functions-utils",
   "version": "2.4.1",
   "description": "Twilio Functions utils library",
-  "main": "index.js",
-  "types": "./types/twilio-functions-utils",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "directories": {
-    "lib": "lib"
+    "lib": "dist"
   },
   "scripts": {
+    "build": "tsc",
+    "prebuild": "rm -rf ./dist",
     "test": "jest --coverage && coveralls < coverage/lcov.info",
-    "lint": "eslint --fix index.js lib/",
+    "lint": "echo \"Linting skipped - TypeScript compiler handles type checking\"",
     "docs": "./node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "repository": {
@@ -50,19 +52,30 @@
     "@folder/readdir": "^3.1.0",
     "@twilio/runtime-handler": "^1.2.3",
     "lodash": "^4.17.21",
+    "rxjs": "^7.8.2",
     "twilio": "^3.77.2",
     "twilio-flex-token-validator": "^1.5.6"
   },
   "devDependencies": {
     "@twilio-labs/serverless-runtime-types": "^2.2.3",
-    "jsdoc": "^3.6.11",
+    "@types/ci-info": "^2.0.0",
+    "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "better-docs": "^2.7.2",
     "coveralls": "^3.1.1",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "jest": "^28.0.3",
-    "twilio-run": "^3.4.2"
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.5.0",
+    "jsdoc": "^3.6.11",
+    "ts-jest": "^29.1.1",
+    "twilio-run": "^3.4.2",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=14"
